--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
    	<div class="row">
    		<div class="logo">
-	         <a href="index.html">Khronos</a>
+	         <a href="index.html">Hackit</a>
 	      </div> 
 
 			<div class="social-links">
@@ -81,10 +81,12 @@
 		   			</div>
 
 			  			<div class="bottom-text">
-			  				<h1>Our event is launching soon.</h1>
+			  				<h1>Our next big event is launching soon...</h1>
 				  			<p>
-							Hackit is a event and stylish website template designed to present
-							your future super awesome product or service. 
+							The Scientific Club of ESI is the biggest student's club of the 
+								Higher School of Computer Science in Algiers. In a few days we will 
+								annonce our next big event. Stay tuned to know more about it!
+					
 				  			</p>			  				
 			  			</div>			  						  			   			
 
