--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				  			<p>
 							The Scientific Club of ESI is the biggest student's club of the 
 								Higher School of Computer Science in Algiers. In a few days we will 
-								annonce our next big event. Stay tuned to know more about it!
+								announce our next big event. Stay tuned to know more about it!
 					
 				  			</p>			  				
 			  			</div>			  						  			   			
