--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		   			</div>
 
 			  			<div class="bottom-text">
-			  				<h1>Our next big event is launching soon....</h1>
+			  				<h1>Our next big event is launching soon.....</h1>
 				  			<p>
 							The Scientific Club of ESI is the biggest student's club of the 
 								Higher School of Computer Science in Algiers. In a few days we will 
